fix solution name

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -25,9 +25,9 @@ jobs:
       - name: Run MSBuild
         id: run_msbuild
         run: |
-          msbuild .\gitactionstest.sln  /t:clean /p:Configuration=Debug
-          nuget restore .\gitactionstest.sln
-          msbuild .\gitactionstest.sln  /t:build /p:Configuration=Debug
+          msbuild .\gitactionstest_dotnet8.sln  /t:clean /p:Configuration=Debug
+          nuget restore .\gitactionstest_dotnet8.sln
+          msbuild .\gitactionstest_dotnet8.sln  /t:build /p:Configuration=Debug
 
       - name: Run VSTests
         id: setup_vstest
