--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
           run: cat Release.txt
         - name: Release
           uses: softprops/action-gh-release@v2
-          if: startsWith(github.ref, 'refs/tags/')
           with:
             files: Release.txt
 
+#   if: startsWith(github.ref, 'refs/tags/')
