--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,12 +10,25 @@ jobs:
   build:
     runs-on: windows-latest
     steps:
-        - name: Checkout
+        - name: checkout
+          id: checkout_code
           uses: actions/checkout@v4
-        - name: Build
-          run: echo ${{ github.sha }} > Release.txt
-        - name: Test
-          run: cat Release.txt
+
+        - name: setup_msbuild
+          id: setup_msbuild
+          uses: microsoft/setup-msbuild@v2
+                
+        - name: Run MSBuild
+          id: run_msbuild
+          run: |
+            echo ${{ github.sha }} > Release.txt
+            msbuild .\gitactionstest_dotnet8.sln -t:clean /p:Configuration=Release
+            nuget restore .\gitactionstest_dotnet8.sln
+            msbuild .\gitactionstest_dotnet8.sln -t:build /p:Configuration=Release
+            msbuild .\gitactionstest_dotnet8.sln -t:publish /p:Configuration=Release
+            git archive --format=zip --output=gitactionstest_dotnet8.zip src/
+            ls -lar >> Release.txt
+
         - name: Release
           uses: softprops/action-gh-release@v2
           if: startsWith(github.ref, 'refs/tags/')
