--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,12 +28,12 @@ jobs:
             nuget restore .\gitactionstest_dotnet8.sln
             msbuild .\gitactionstest_dotnet8.sln -t:build /p:Configuration=Release
             msbuild .\gitactionstest_dotnet8.sln -t:publish /p:Configuration=Release
-            git archive --format=zip --output=./gitactionstest_dotnet8.zip ./bin/Release/net8.0/publish
+            dir /s /b 
 
-        - name: result
-          id: result
-          run: |
-            dir /s /b bin
+        # - name: result
+        #   id: result
+        #   run: |
+        #     git archive --format=zip --output=./gitactionstest_dotnet8.zip ./bin/Release/net8.0/publish
 
         - name: release
           uses: softprops/action-gh-release@v2
@@ -41,5 +41,4 @@ jobs:
           with:
             files: |
               Release.txt
-              gitactionstest_dotnet8.zip
 
